[Update] fix styles for editing image z-index

--- a/src/component/list/List.scss
+++ b/src/component/list/List.scss
@@ -24,6 +24,7 @@
 }
 
 .ListItem-image-area {
+  z-index: inherit;
   margin-top: 15px;
   position: relative;
   display: block;
