--- a/src/pages/store/Store.scss
+++ b/src/pages/store/Store.scss
@@ -99,6 +99,7 @@ strong {
 }
 
 .Store-Detail-Image {
+  z-index: inherit;
   overflow-x: auto;
   white-space: nowrap;
 }
